Полностью обновил весь проект. Разделил пользователей и продавцов.